small changes to the style

--- a/index.html
+++ b/index.html
@@ -54,11 +54,17 @@
           </p>
           <p>
             Currently, I am working in Autonomous Systems Laboratory (ASL) with
-            the group of Professor 
-            <a href="https://scholar.google.com/citations?user=q_Pbm3kAAAAJ&hl=en">Hyondong Oh</a>
+            the group of Professor
+            <a
+              href="https://scholar.google.com/citations?user=q_Pbm3kAAAAJ&hl=en"
+              >Hyondong Oh</a
+            >
             .Prior to this, I had a chance to work in the Innovative
-            Thermodynamics Laboratory (ITEL) with Professor 
-            <a href="https://scholar.google.co.kr/citations?user=1JpaQ-QAAAAJ&hl=en">Jaeseon Lee</a>
+            Thermodynamics Laboratory (ITEL) with Professor
+            <a
+              href="https://scholar.google.co.kr/citations?user=1JpaQ-QAAAAJ&hl=en"
+              >Jaeseon Lee</a
+            >
             .
           </p>
           <p>
@@ -73,11 +79,8 @@
             collaborations!
           </p>
         </div>
-        <img
-          src="/img/image.jpeg"
-          alt="Meraj Mammadov"
-          class="profile-picture"
-        />
+
+        <img src="/img/image.jpeg" alt="Meraj Mammadov" />
       </section>
     </div>
   </body>
