change in the description

--- a/html/merajpt.html
+++ b/html/merajpt.html
@@ -46,12 +46,12 @@
       <br />
       <p class="content">
         Here you can test some of the neural language models that I have built.
-        <i>Nizami</i> stands for a dataset built by collecting the works of
-        Nizami Ganjavi in Azerbaijani, and <i>Shakespeare</i> stands for the
-        same in English. I will add attention-based models in the future.
+        Dataset Nizami stands for collected works of Nizami Ganjavi in
+        Azerbaijani, and Shakespeare stands for the same in English. I will add
+        attention-based models in the future.
       </p>
 
-      <p class="dt top" id="dt"><span> Model </span></p>
+      <p class="dt" id="dt"><span> Model </span></p>
 
       <div class="switch">
         <button
