small style changes

--- a/html/merajpt.html
+++ b/html/merajpt.html
@@ -46,7 +46,7 @@
       <br />
       <p class="content">
         Here you can test some of the neural language models that I have built.
-        Dataset Nizami stands for collected works of Nizami Ganjavi in
+        Dataset Nizami stands for the collected works of Nizami Ganjavi in
         Azerbaijani, and Shakespeare stands for the same in English. I will add
         attention-based models in the future.
       </p>
