added two more problems

--- a/html/enigma.html
+++ b/html/enigma.html
@@ -120,10 +120,32 @@
           taking steps in each direction with equal probability. What is the
           probability that the particle will come back to the origin?
         </li>
+        <br />
+        <li>
+          Calculate the repulsion force the light rays from the Sun apply onto
+          the Earth.
+        </li>
+        <br />
+        <li>
+          Describe the properties of a material that makes up a liquid planet,
+          so that however much mass is removed, the radius of the planet stays
+          the same.
+        </li>
+        <br />
+        <li>
+          Find the oscillation period of a spherical ball oscillating in water.\(^1\)
+        </li>
+        <br />
+        <li>
+          Two small, identical particles have opposing charges of magnitude
+          \(q\). They are separated by a distance \(L\) and left free. Find the
+          time it takes them to collide as a function of the separation
+          distance.\(^3\)
+        </li>
       </ol>
       <br />
       <br />
-      References: \(^1\)Nahid Mammadov, \(^2\)Jaan Kalda
+      References: \(^1\)Nahid Mammadov, \(^2\)Jaan Kalda, \(^3\)Rashadat Gadmaliyev
     </div>
   </body>
 </html>
