small change to a problem

--- a/html/enigma.html
+++ b/html/enigma.html
@@ -97,9 +97,9 @@
         <br />
         <li>
           A point particle of mass \(m\) and charge \(q\) is moving under a
-          homogenous, perpendicularly-directed magnetic field of induction \(B\)
-          and electrical field of intensity E. Ignoring gravity and relativity,
-          find its trajectory.\(^1\)
+          homogenous magnetic field of induction \(B\) and electrical field of
+          intensity E, directed perpendicular to each other. Ignoring gravity
+          and relativity, find its trajectory.\(^1\)
         </li>
         <br />
         <li>
@@ -133,7 +133,8 @@
         </li>
         <br />
         <li>
-          Find the oscillation period of a spherical ball oscillating in water.\(^1\)
+          Find the oscillation period of a spherical ball oscillating in
+          water.\(^1\)
         </li>
         <br />
         <li>
@@ -145,7 +146,8 @@
       </ol>
       <br />
       <br />
-      References: \(^1\)Nahid Mammadov, \(^2\)Jaan Kalda, \(^3\)Rashadat Gadmaliyev
+      References: \(^1\)Nahid Mammadov, \(^2\)Jaan Kalda, \(^3\)Rashadat
+      Gadmaliyev
     </div>
   </body>
 </html>
