small change to a problem

--- a/html/enigma.html
+++ b/html/enigma.html
@@ -140,8 +140,7 @@
         <li>
           Two small, identical particles have opposing charges of magnitude
           \(q\). They are separated by a distance \(L\) and left free. Find the
-          time it takes them to collide as a function of the separation
-          distance.\(^3\)
+          collision time as a function of the separation distance.\(^3\)
         </li>
       </ol>
       <br />
