change in the description

--- a/html/enigma.html
+++ b/html/enigma.html
@@ -55,11 +55,10 @@
 
       <br />
       <p class="content">
-        Here I challenge you to solve some interesting math and physics related
-        problems that I have encountered, or thought of throughtout years. Note
-        that while selecting the problems, I have focused more on how
-        interesting the problem is and how enjoyable the solution process is,
-        rather than the hardness of them.
+        Here I challenge you with some fascinating math and physics 
+        problems that I have encountered, or thought of over the years. Note
+        that I have selected the problems based on the enjoyment they offer in the
+        solution process, rather than their difficulty.
       </p>
 
       <p class="dt" id="dt"><span> Problems </span></p>
