added two more problems

--- a/html/enigma.html
+++ b/html/enigma.html
@@ -55,10 +55,10 @@
 
       <br />
       <p class="content">
-        Here I challenge you with some fascinating math and physics 
-        problems that I have encountered, or thought of over the years. Note
-        that I have selected the problems based on the enjoyment they offer in the
-        solution process, rather than their difficulty.
+        Here I challenge you with some fascinating math and physics problems
+        that I have encountered, or thought of over the years. Note that I have
+        selected the problems based on the enjoyment they offer in the solution
+        process, rather than their difficulty. Enjoy them!
       </p>
 
       <p class="dt" id="dt"><span> Problems </span></p>
@@ -140,6 +140,19 @@
           Two small, identical particles have opposing charges of magnitude
           \(q\). They are separated by a distance \(L\) and left free. Find the
           collision time as a function of the separation distance.\(^3\)
+        </li>
+        <br />
+        <li>
+          A light source of intensity \(I\) and frequency \(f_0\) falls normally
+          onto a mirror with mass \(m\) and initial velocity of zero. Find the
+          frequency of the reflected beam as a function of time.
+        </li>
+        <br />
+        <li>
+          A linearly polarised light beam transits from a medium with refraction
+          index of \(n_1\) to another of \(n_2\), normal to the surface. Find
+          the fraction of the reflected and refracted beams to the incident
+          ray.\(^3\)
         </li>
       </ol>
       <br />
