--- a/html/enigma.html
+++ b/html/enigma.html
@@ -154,6 +154,16 @@
           the fraction of the reflected and refracted beams to the incident
           ray.\(^3\)
         </li>
+        <br />
+        <li>
+          Imagine that the clouds are made of tiny water droplets that hang onto
+          the air and distributed homogenously in the space. Find the
+          acceleration of a rain droplet that is falling down among them. The
+          rain droplet, initially of negligible size, has a density of \(\rho\),
+          and the water droplets in the cloud have a mean density of
+          \(\lambda\). Assume the rain droplet absorbs all encountered water
+          droplets while maintaining a spherical shape.
+        </li>
       </ol>
       <br />
       <br />
