added 17th problem

--- a/html/enigma.html
+++ b/html/enigma.html
@@ -164,6 +164,15 @@
           \(\lambda\). Assume the rain droplet absorbs all encountered water
           droplets while maintaining a spherical shape.
         </li>
+        <br />
+        <li>
+          Consider a rigid container from which all the air has been pumped out.
+          Now, the valve of the container is slightly opened, and the air from
+          outside is slowly filling in. The air flow stops when mechanical
+          equilibrium is reached. Find the final temperature of the air inside.
+          The room temperature is T, and the heat flux through the walls is
+          ignored.\(^2\)
+        </li>
       </ol>
       <br />
       <br />
