--- a/html/enigma.html
+++ b/html/enigma.html
@@ -97,7 +97,7 @@
         <li>
           A point particle of mass \(m\) and charge \(q\) is moving under a
           homogenous magnetic field of induction \(B\) and electrical field of
-          intensity E, directed perpendicular to each other. Ignoring gravity
+          intensity \(E\), directed perpendicular to each other. Ignoring gravity
           and relativity, find its trajectory.\(^1\)
         </li>
         <br />
