added two problems

--- a/html/enigma.html
+++ b/html/enigma.html
@@ -97,8 +97,8 @@
         <li>
           A point particle of mass \(m\) and charge \(q\) is moving under a
           homogenous magnetic field of induction \(B\) and electrical field of
-          intensity \(E\), directed perpendicular to each other. Ignoring gravity
-          and relativity, find its trajectory.\(^1\)
+          intensity \(E\), directed perpendicular to each other. Ignoring
+          gravity and relativity, find its trajectory.\(^1\)
         </li>
         <br />
         <li>
@@ -118,6 +118,12 @@
           Consider a particle undergoing an \(n\)-dimensional random walk,
           taking steps in each direction with equal probability. What is the
           probability that the particle will come back to the origin?
+        </li>
+        <br />
+        <li>
+          A person is collecting a set of distinct coupons, and each time they
+          acquire a coupon, it is equally likely to be any one of the set.
+          Determine the expected number of trials needed to complete the set.
         </li>
         <br />
         <li>
@@ -172,6 +178,11 @@
           equilibrium is reached. Find the final temperature of the air inside.
           The room temperature is T, and the heat flux through the walls is
           ignored.\(^2\)
+        </li>
+        <br />
+        <li>
+          How far away from the handle of a sword of length \(L\) should you hit
+          an item, so that you feel the impact the least?
         </li>
       </ol>
       <br />
