--- a/html/enigma.html
+++ b/html/enigma.html
@@ -184,6 +184,13 @@
           How far away from the handle of a sword of length \(L\) should you hit
           an item, so that you feel the impact the least?
         </li>
+        <br />
+        <li>
+          Imagine (1) an object (2) light ray approaching a planet of mass \(M\)
+          from infinity, with initial lateral distance to
+          the center of the planet \(R\) and speed \(v\). Find the shift in the heading direction
+          after it escapes the gravity of the planet.
+        </li>
       </ol>
       <br />
       <br />
