some changes in the phrasings

--- a/html/enigma.html
+++ b/html/enigma.html
@@ -68,7 +68,9 @@
           Find the surface area and the volume of an n-dimensional sphere.
         </li>
         <br />
-        <li>How many degrees of freedom does an n-sided polygon have?</li>
+        <li>
+          Determine the number of degrees of freedom in an \(n\)-sided polygon.
+        </li>
         <br />
         <li>
           Imagine two identical objects with heat capacity \(C\) and
@@ -143,9 +145,8 @@
         </li>
         <br />
         <li>
-          Two small, identical particles have opposing charges of magnitude
-          \(q\). They are separated by a distance \(L\) and left free. Find the
-          collision time as a function of the separation distance.\(^3\)
+          Two small particles with opposing charges \(q\) are separated by a a
+          distance \(L\) and left free. Find the collision time.\(^3\)
         </li>
         <br />
         <li>
@@ -157,8 +158,8 @@
         <li>
           A linearly polarised light beam transits from a medium with refraction
           index of \(n_1\) to another of \(n_2\), normal to the surface. Find
-          the fraction of the reflected and refracted beams to the incident
-          ray.\(^3\)
+          the portion of the power that is reflected and refracted from the
+          surface.\(^3\)
         </li>
         <br />
         <li>
@@ -187,8 +188,8 @@
         <br />
         <li>
           Imagine (1) an object (2) light ray approaching a planet of mass \(M\)
-          from infinity, with initial lateral distance to
-          the center of the planet \(R\) and speed \(v\). Find the shift in the heading direction
+          from infinity, with initial lateral distance to the center of the
+          planet \(R\) and speed \(v\). Find the shift in the heading direction
           after it escapes the gravity of the planet.
         </li>
       </ol>
