n changed to latex form

--- a/html/enigma.html
+++ b/html/enigma.html
@@ -65,7 +65,7 @@
 
       <ol class="content problem">
         <li>
-          Find the surface area and the volume of an n-dimensional sphere.
+          Find the surface area and the volume of an \(n\)-dimensional sphere.
         </li>
         <br />
         <li>
