--- a/html/enigma.html
+++ b/html/enigma.html
@@ -37,6 +37,7 @@
     <div class="container" id="container">
       <h1><a href="/index.html">Meraj Mammadov</a></h1>
       <nav class="nav">
+        <a href="/index.html">home</a>
         <a href="/Meraj_cv.pdf">cv</a>
         <a href="/html/merajpt.html">merajpt</a>
         <a href="/html/enigma.html">enigma</a>
