genres, sliders, and values done

--- a/movie/movie.html
+++ b/movie/movie.html
@@ -23,6 +23,7 @@
     <!-- <link rel="stylesheet" href="/css/styles.css" /> -->
     <link rel="stylesheet" href="/movie/movie.css" />
     <script src="/js/common.js" defer></script>
+    <script src="/movie/movie.js" defer></script>
     <link
       href="https://fonts.googleapis.com/css?family=Lato:400,700"
       rel="stylesheet"
@@ -55,11 +56,60 @@
             </div>
 
             <div class="sliders">
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="myRange"></div>
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="myRange"></div>
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="myRange"></div>
+                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s1"></div>
+                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s2"></div>
+                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s3"></div>
+
+                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s4"></div>
+                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s5"></div>
+                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s6"></div>
+
+                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s7"></div>
+                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s8"></div>
+                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s9"></div>
+
+                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s10"></div>
+                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s11"></div>
+                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s12"></div>
+
+                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s13"></div>
+                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s14"></div>
+                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s15"></div>
+
+                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s16"></div>
+                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s17"></div>
+                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s18"></div>
+            </div>
+
+            <div class="values">
+                <span class="value" id="v1"></span>
+                <span class="value" id="v2"></span>
+                <span class="value" id="v3"></span>
+
+                <span class="value" id="v4"></span>
+                <span class="value" id="v5"></span>
+                <span class="value" id="v6"></span>
+
+                <span class="value" id="v7"></span>
+                <span class="value" id="v8"></span>
+                <span class="value" id="v9"></span>
+                
+                <span class="value" id="v10"></span>
+                <span class="value" id="v11"></span>
+                <span class="value" id="v12"></span>
+
+                <span class="value" id="v13"></span>
+                <span class="value" id="v14"></span>
+                <span class="value" id="v15"></span>
+
+                <span class="value" id="v16"></span>
+                <span class="value" id="v17"></span>
+                <span class="value" id="v18"></span>
             </div>
         </div>
+
+        <!-- <div class="box">
+        </div> -->
 
         <div class="box">
             <!-- ddd -->
