generate button added

--- a/movie/movie.html
+++ b/movie/movie.html
@@ -108,8 +108,11 @@
             </div>
         </div>
 
-        <!-- <div class="box">
-        </div> -->
+        <div class="middle">
+            <button class="button" id="button">
+                Generate
+            </button>
+        </div>
 
         <div class="box">
             <!-- ddd -->
