button width change

--- a/movie/movie.html
+++ b/movie/movie.html
@@ -110,7 +110,7 @@
 
         <div class="middle">
             <button class="button" id="button">
-                Generate
+                Recommend
             </button>
         </div>
 
