removed redundant divs

--- a/movie/movie.html
+++ b/movie/movie.html
@@ -56,29 +56,29 @@
             </div>
 
             <div class="sliders">
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s1"></div>
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s2"></div>
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s3"></div>
+              <input type="range" min="0" max="100" value="0.5" class="slider" id="s1">
+              <input type="range" min="0" max="100" value="0.5" class="slider" id="s2">
+              <input type="range" min="0" max="100" value="0.5" class="slider" id="s3">
 
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s4"></div>
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s5"></div>
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s6"></div>
+              <input type="range" min="0" max="100" value="0.5" class="slider" id="s4">
+              <input type="range" min="0" max="100" value="0.5" class="slider" id="s5">
+              <input type="range" min="0" max="100" value="0.5" class="slider" id="s6">
 
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s7"></div>
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s8"></div>
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s9"></div>
+              <input type="range" min="0" max="100" value="0.5" class="slider" id="s7">
+              <input type="range" min="0" max="100" value="0.5" class="slider" id="s8">
+              <input type="range" min="0" max="100" value="0.5" class="slider" id="s9">
 
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s10"></div>
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s11"></div>
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s12"></div>
+              <input type="range" min="0" max="100" value="0.5" class="slider" id="s10">
+              <input type="range" min="0" max="100" value="0.5" class="slider" id="s11">
+              <input type="range" min="0" max="100" value="0.5" class="slider" id="s12">
 
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s13"></div>
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s14"></div>
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s15"></div>
+              <input type="range" min="0" max="100" value="0.5" class="slider" id="s13">
+              <input type="range" min="0" max="100" value="0.5" class="slider" id="s14">
+              <input type="range" min="0" max="100" value="0.5" class="slider" id="s15">
 
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s16"></div>
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s17"></div>
-                <div class="slider"><input type="range" min="0" max="100" value="0.5" class="slider" id="s18"></div>
+              <input type="range" min="0" max="100" value="0.5" class="slider" id="s16">
+              <input type="range" min="0" max="100" value="0.5" class="slider" id="s17">
+              <input type="range" min="0" max="100" value="0.5" class="slider" id="s18">
             </div>
 
             <div class="values">
