fixed the inference bug

--- a/movie/movie.html
+++ b/movie/movie.html
@@ -110,7 +110,7 @@
         </div>
 
         <div class="middle">
-            <button onclick="main()" class="button" id="button">
+            <button onclick="recommend()" class="button" id="button">
                 Recommend
             </button>
         </div>
