--- a/movie/movie.html
+++ b/movie/movie.html
@@ -118,17 +118,29 @@
         <div class="box">
           <div class="outputs">
             <p class="output" id="o1"></p>
+            <p class="info" id="i1"></p>
             <p class="output" id="o2"></p>
+            <p class="info" id="i2"></p>
             <p class="output" id="o3"></p>
+            <p class="info" id="i3"></p>
             <p class="output" id="o3"></p>
+            <p class="info" id="i3"></p>
             <p class="output" id="o4"></p>
+            <p class="info" id="i4"></p>
             <p class="output" id="o5"></p>
+            <p class="info" id="i5"></p>
             <p class="output" id="o6"></p>
+            <p class="info" id="i6"></p>
             <p class="output" id="o7"></p>
+            <p class="info" id="i7"></p>
             <p class="output" id="o8"></p>
+            <p class="info" id="i8"></p>
             <p class="output" id="o9"></p>
+            <p class="info" id="i9"></p>
           </div>
         </div>
     </div>
   </body>
 </html>
+
+<!-- ids not required? -->
