major design changes

--- a/movie/movie.html
+++ b/movie/movie.html
@@ -117,26 +117,61 @@
 
         <div class="box">
           <div class="outputs">
-            <p class="output" id="o1"></p>
-            <p class="info" id="i1"></p>
-            <p class="output" id="o2"></p>
-            <p class="info" id="i2"></p>
-            <p class="output" id="o3"></p>
-            <p class="info" id="i3"></p>
-            <p class="output" id="o3"></p>
-            <p class="info" id="i3"></p>
-            <p class="output" id="o4"></p>
-            <p class="info" id="i4"></p>
-            <p class="output" id="o5"></p>
-            <p class="info" id="i5"></p>
-            <p class="output" id="o6"></p>
-            <p class="info" id="i6"></p>
-            <p class="output" id="o7"></p>
-            <p class="info" id="i7"></p>
-            <p class="output" id="o8"></p>
-            <p class="info" id="i8"></p>
-            <p class="output" id="o9"></p>
-            <p class="info" id="i9"></p>
+            <div class="outbox">
+              <p class="movie_name" id="o0"></p>
+              <p class="align" id="a0" style="padding-left: 0px;"></p>
+              <p class="rating" id="i0"></p>
+            </div>
+            <div class="outbox">
+              <p class="movie_name" id="o1"></p>
+              <p class="align" id="a1"></p>
+              <p class="rating" id="i1"></p>
+            </div>
+            <div class="outbox">
+              <p class="movie_name" id="o2"></p>
+              <p class="align" id="a2"></p>
+              <p class="rating" id="i2"></p>
+            </div>
+            <div class="outbox">
+              <p class="movie_name" id="o3"></p>
+              <p class="align" id="a3"></p>
+              <p class="rating" id="i3"></p>
+            </div>
+            <div class="outbox">
+              <p class="movie_name" id="o4"></p>
+              <p class="align" id="a4"></p>
+              <p class="rating" id="i4"></p>
+            </div>
+            <div class="outbox">
+              <p class="movie_name" id="o5"></p>
+              <p class="align" id="a5"></p>
+              <p class="rating" id="i5"></p>
+            </div>
+            <div class="outbox">
+              <p class="movie_name" id="o6"></p>
+              <p class="align" id="a6"></p>
+              <p class="rating" id="i6"></p>
+            </div>
+            <div class="outbox">
+              <p class="movie_name" id="o7"></p>
+              <p class="align" id="a7"></p>
+              <p class="rating" id="i7"></p>
+            </div>
+            <div class="outbox">
+              <p class="movie_name" id="o8"></p>
+              <p class="align" id="a8"></p>
+              <p class="rating" id="i8"></p>
+            </div>
+            <div class="outbox">
+              <p class="movie_name" id="o9"></p>
+              <p class="align" id="a9"></p>
+              <p class="rating" id="i9"></p>
+            </div>
+            <div class="outbox">
+              <p class="movie_name" id="o10"></p>
+              <p class="align" id="a10"></p>
+              <p class="rating" id="i10"></p>
+            </div>
           </div>
         </div>
     </div>
