--- a/html/contact.html
+++ b/html/contact.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meraj Mammadov Contact</title>
-    <link rel="favicon" type="image/x-icon" href="/img/favicon.ico" />
+    <link rel="favicon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/css/skeleton.css" />
     <link rel="stylesheet" href="/css/styles.css" />
     <script src="/js/common.js" defer></script>
