fixed a small issue in outputs box

--- a/movie/movie.html
+++ b/movie/movie.html
@@ -120,7 +120,7 @@
             <div class="outbox">
               <p class="index" id="idx0"></p>
               <p class="movie_name" id="o0"></p>
-              <p class="align" id="a0" style="padding-left: 0px;"></p>
+              <p class="align" id="a0"></p>
               <p class="rating" id="i0"></p>
             </div>
             <div class="outbox">
