added special style for the first and last output

--- a/movie/movie.html
+++ b/movie/movie.html
@@ -118,10 +118,10 @@
         <div class="box">
           <div class="outputs">
             <div class="outbox">
-              <p class="index" id="idx0"></p>
-              <p class="movie_name" id="o0"></p>
-              <p class="align" id="a0"></p>
-              <p class="rating" id="i0"></p>
+              <p class="index" id="idx0" style="margin: 0px;"></p>
+              <p class="movie_name" id="o0" style="margin: 0px;"></p>
+              <p class="align" id="a0" style="margin: 0px;"></p>
+              <p class="rating" id="i0" style="margin: 0px;"></p>
             </div>
             <div class="outbox">
               <p class="index" id="idx1"></p>
@@ -178,10 +178,10 @@
               <p class="rating" id="i9"></p>
             </div>
             <div class="outbox">
-              <p class="index" id="idx10"></p>
-              <p class="movie_name" id="o10"></p>
-              <p class="align" id="a10"></p>
-              <p class="rating" id="i10"></p>
+              <p class="index" id="idx10" style="margin-bottom: 0px;"></p>
+              <p class="movie_name" id="o10" style="margin-bottom: 0px;"></p>
+              <p class="align" id="a10" style="margin-bottom: 0px;"></p>
+              <p class="rating" id="i10" style="margin-bottom: 0px;"></p>
             </div>
           </div>
         </div>
