fixed a small typo

--- a/html/enigma.html
+++ b/html/enigma.html
@@ -145,7 +145,7 @@
         </li>
         <br />
         <li>
-          Two small particles with opposing charges \(q\) are separated by a a
+          Two small particles with opposing charges \(q\) are separated by a
           distance \(L\) and left free. Find the collision time.\(^3\)
         </li>
         <br />
