--- a/index.html
+++ b/index.html
@@ -33,8 +33,26 @@
     <div class="container" id="container">
       <h1><a href="/index.html">Meraj Mammadov</a></h1>
       <nav class="nav">
+        <a href="/index.html">home</a>
         <a href="/Meraj_cv.pdf">cv</a>
-        <a href="/html/merajpt.html">merajpt</a>
+
+
+
+
+
+        <div class="dropdown">
+          <button onclick="ProjectsMenuFunction()" class="dropbtn nav">projects</button>
+          <div id="myDropdown" class="dropdown-content">
+            <a href="/html/merajpt.html">merajpt</a>
+            <a href="#">movie</a>
+            <a href="#">Link 3</a>
+          </div>
+        </div>
+
+
+
+
+
         <a href="/html/enigma.html">enigma</a>
         <a href="/html/contact.html">contact</a>
 
