--- a/index.html
+++ b/index.html
@@ -36,28 +36,20 @@
         <a href="/index.html">home</a>
         <a href="/Meraj_cv.pdf">cv</a>
 
-
-
-
-
         <div class="dropdown">
-          <button onclick="ProjectsMenuFunction()" class="dropbtn nav">projects</button>
+          <button onclick="ProjectsMenuFunction()" class="dropbtn">projects</button>
           <div id="myDropdown" class="dropdown-content">
             <a href="/html/merajpt.html">merajpt</a>
-            <a href="#">movie</a>
-            <a href="#">Link 3</a>
+            <a href="/movie/movie.html">movie</a>
+            <a href="/html/life.html">life</a>
           </div>
         </div>
-
-
-
-
 
         <a href="/html/enigma.html">enigma</a>
         <a href="/html/contact.html">contact</a>
 
         <div class="darkmode-container">
-          <input type="checkbox" id="dark-mode-toggle" />
+          <input type="checkbox" class="dark-mode-toggle" id="dark-mode-toggle" />
           <label for="dark-mode-toggle"> </label>
         </div>
       </nav>
