movie boxes white mode (bad color)

--- a/movie/movie.html
+++ b/movie/movie.html
@@ -59,7 +59,7 @@
       </nav>
 
     <div class="movie_container">
-        <div class="box">
+        <div class="box" id="inputs-box">
             <div class="genres">
                 <p class="genre"> Action </p>
                 <p class="genre"> Adventure </p>
@@ -140,7 +140,7 @@
             </button>
         </div>
 
-        <div class="box">
+        <div class="box" id="outputs-box">
           <div class="outputs">
             <div class="outbox">
               <p class="index" id="idx0" style="margin: 0px;"></p>
