--- a/html/contact.html
+++ b/html/contact.html
@@ -37,7 +37,7 @@
         <a href="/Meraj_cv.pdf">cv</a>
 
         <div class="dropdown">
-          <button onclick="ProjectsMenuFunction()" class="dropbtn">projects</button>
+          <button onclick="ProjectsMenuFunction()" class="dropbtn" id="dropbtn">projects</button>
           <div id="myDropdown" class="dropdown-content">
             <a href="/html/merajpt.html">merajpt</a>
             <a href="/movie/movie.html">movie</a>
