--- a/movie/movie.html
+++ b/movie/movie.html
@@ -41,7 +41,7 @@
         <a href="/Meraj_cv.pdf">cv</a>
 
         <div class="dropdown">
-          <button onclick="ProjectsMenuFunction()" class="dropbtn">projects</button>
+          <button onclick="ProjectsMenuFunction()" class="dropbtn" id="dropbtn">projects</button>
           <div id="myDropdown" class="dropdown-content">
             <a href="/html/merajpt.html">merajpt</a>
             <a href="/movie/movie.html">movie</a>
@@ -57,6 +57,7 @@
           <label for="dark-mode-toggle"> </label>
         </div>
       </nav>
+    </div>
 
     <div class="movie_container">
         <div class="box" id="inputs-box">
